Divergence: Backport Linux lockdep fix to ACPICA.

Backport changes made in Linux aclinux.h to ACPICA to reduce divergence
of the ACPICA base code from Linux.

Following commits are involved:
1. Rafael J. Wysocki <rjw@sisk.pl>
   ACPI: Fix lockdep false positives in acpi_power_off()
   https://bugzilla.kernel.org/show_bug.cgi?id=38152

This will decrease 29 lines of 20120913 divergence.diff.

Signed-off-by: Lv Zheng <lv.zheng@intel.com>
Cc: Rafael J. Wysocki <rjw@sisk.pl>
Cc: Len Brown <len.brown@intel.com>